# sign-language-tools

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md  reference.md  visualization.md
examples/: video_player.ipynb
explanation/: index.html
how-to-guides/: index.html
pose/: index.html
reference/: index.html
site/: index.html  objects.inv
src/sign_language_tools/: __init__.py
src/sign_language_tools/annotations/: __init__.py
src/sign_language_tools/annotations/transforms/: __init__.py  segmentation_vector.py
src/sign_language_tools/annotations/utils/: iou.py  nms.py
src/sign_language_tools/annotations/visualization/: segments.py
src/sign_language_tools/common/: __init__.py
src/sign_language_tools/common/transforms/: __init__.py  compose.py  identity.py  map.py  randomize.py
src/sign_language_tools/core/: transform.py
src/sign_language_tools/features/landmarks/: edges.py  indices.py  select.py
src/sign_language_tools/io/: read.py
src/sign_language_tools/landmark/: edges.py
src/sign_language_tools/landmark/transform/: flip.py  rotate.py  scale.py  translation.py
src/sign_language_tools/pose/: __init__.py
src/sign_language_tools/processing/: cleaning.py  interpolation.py  normalisation.py  padding.py  resampling.py
src/sign_language_tools/utils/: cv.py  mediapipe.py
src/sign_language_tools/visualisation/: __init__.py
src/sign_language_tools/visualization/: __init__.py
tutorials/: index.html
visualization/: index.html
(+53 files in other folders)
